Func Add new Game- need to check
need To check
